--- a/windows.css
+++ b/windows.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('themes.css');
+@import url('https://russell2259.github.io/Nightmare-Windows/themes.css');
 
 .window {
     background: var(--background);
