--- a/windows.css
+++ b/windows.css
@@ -1,5 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://russell2259.github.io/Nightmare-Windows/themes.css');
+
+::root {
+    --background: #f8f8f8;
+    --primary: #c7d1db;
+    --text: #000;
+    --secondary: #fff;
+}
+
+[data-theme="light"] {
+    --background: #f8f8f8;
+    --primary: #c7d1db;
+    --text: #000;
+    --secondary: #fff;
+}
+
+[data-theme="dark"] {
+    --background: #202124;
+    --primary: darkslategrey;
+    --text: #f8f8f8;
+    --secondary: #303134;
+}
 
 .window {
     background: var(--background);
