--- a/windows.css
+++ b/windows.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-html::root {
+html {
     --background: #f8f8f8;
     --primary: #c7d1db;
     --text: #000;
